# Hermes

./: .gitignore  Cargo.toml  HERMES_C.md  README.md
hermes-action/: Cargo.toml
hermes-action/src/: filesystem.rs  lib.rs  process.rs
hermes-core/: Cargo.toml
hermes-core/src/: config.rs  error.rs  lib.rs  types.rs
hermes-daemon/: Cargo.toml
hermes-daemon/src/: main.rs
hermes-interface/: Cargo.toml
hermes-interface/src/: autonomous.rs  cli.rs  kimi_bridge.rs  lib.rs  oauth.rs  repl.rs  self_status.rs  tui.rs
hermes-memory/: Cargo.toml
hermes-memory/src/: checkpoint.rs  lib.rs  skill.rs
hermes-meta/: Cargo.toml
hermes-meta/src/: bootstrap.rs  lib.rs  reflection.rs
hermes-perception/: Cargo.toml
hermes-perception/src/: filesystem.rs  lib.rs  system.rs
hermes-safety/: Cargo.toml
hermes-safety/src/: audit.rs  capability.rs  lib.rs  principles.rs
