[package]
name = "hermes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sled = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
