[package]
name = "hermes-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core = { workspace = true }
hermes-safety = { workspace = true }
hermes-perception = { workspace = true }
hermes-action = { workspace = true }
hermes-memory = { workspace = true }
hermes-meta = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dirs = { workspace = true }
rand = "0.8"
hostname = "0.4"
sys-info = "0.9"
