[package]
name = "hermes-meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core = { workspace = true }
hermes-safety = { workspace = true }
hermes-memory = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
walkdir = "2.4"

[dev-dependencies]
tokio-test = { workspace = true }
